--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -50,4 +50,4 @@
 
 *   **5.1 理论的最终合成：** 当代尖端AI的发展，标志着两种危机模式的汇合。
     > **核心公式：我们正在使用洛夫克拉夫特式的引擎（不可知的黑箱AI），去构建一个鲍德里亚式的世界（无限的超真实模拟）。**
-*   **5.2 新的恐怖范式：** **[计算性诡异](./计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸发，详见寓言 **[《责任的蒸发》](./言灵/第三个寓言.md)**。
+*   **5.2 新的恐怖范式：** **[拟计算 (Pseudo-Computation)](./计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸aporation，详见寓言 **[《责任的蒸发》](./言灵/第三个寓言.md)**。
