--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -1,6 +1,6 @@
 # 理论索引：真实性的双重危机——洛夫克拉夫特式深渊与鲍德里亚式镜面的符号学合成
 
-> **摘要：** 本索引旨在构建一个理论框架，用于理解“真实”（Reality）在现代与后现代语境下的双重瓦解模式。该理论以符号学为核心分析工具，将H.P.洛夫克拉夫特的“宇宙恐怖”与让·鲍德里亚的“超真实”理论进行并置。前者被定义为**“不可言说之参照物（Unsignifiable Referent）”**引发的符号系统崩溃；后者则被定义为**“参照物缺席（Absent Referent）”**导致的符号系统内爆。最终，本理论指出，当代计算机科学，特别是人工智能（AI），正作为这两种危机的核心引擎，将二者合成为一种全新的、统一的现象，我们将其命名为 **[计算性诡异 (Computational Uncanny)](.../main/计算机/计算/拟计算/v1.md)**。
+> **摘要：** 本索引旨在构建一个理论框架，用于理解“真实”（Reality）在现代与后现代语境下的双重瓦解模式。该理论以符号学为核心分析工具，将H.P.洛夫克拉夫特的“宇宙恐怖”与让·鲍德里亚的“超真实”理论进行并置。前者被定义为**“不可言说之参照物（Unsignifiable Referent）”**引发的符号系统崩溃；后者则被定义为**“参照物缺席（Absent Referent）”**导致的符号系统内爆。最终，本理论指出，当代计算机科学，特别是人工智能（AI），正作为这两种危机的核心引擎，将二者合成为一种全新的、统一的现象，我们将其命名为 **[计算性诡异 (Computational Uncanny)](../../../计算机/计算/拟计算/v1.md)**。
 
 ---
 
