--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -14,40 +14,40 @@
     *   **1.1.1 能指（Signifier）：** 符号的形式，即其物理或可感知的存在（如文字、声音、图像）。
     *   **1.1.2 所指（Signified）：** 符号所代表的概念或心理意象。
     *   **1.1.3 参照物（Referent）：** 符号在外部现实世界中所指向的客观实体。
-*   **1.2 符号学链条的稳定性：** 传统意义上的“真实”依赖于能指-所指-参照物之间稳定、清晰的对应关系。本理论的核心即是这条链条在两个关键点上的断裂，具体分析见 **[关于姓名](./关于姓名/llama.md)** 的历史辩证法。
+*   **1.2 符号学链条的稳定性：** 传统意义上的“真实”依赖于能指-所指-参照物之间稳定、清晰的对应关系。本理论的核心即是这条链条在两个关键点上的断裂，具体分析见 **[关于姓名](../../../关于姓名/llama.md)** 的历史辩证法。
 
 ## 第二部分：第一种危机模式——洛夫克拉夫特式深渊
 
 *   **2.0 模式定义：参照物压倒符号（The Terror of the Unsignifiable Referent）**
-*   **2.1 危机机制：** 存在一个过于庞大、异质、超越人类认知框架的参照物（如：泡沫经济破裂后的社会压力、僵化的户籍制度）。这个参照物无法被现有的能指系统（语言、科学）所捕捉或描述。这一现象的极端社会表现形式，可参考对 **[“人间蒸发”现象](./关于泡沫时代/遥远的父亲/llama.md)** 的分析。
+*   **2.1 危机机制：** 存在一个过于庞大、异质、超越人类认知框架的参照物（如：泡沫经济破裂后的社会压力、僵化的户籍制度）。这个参照物无法被现有的能指系统（语言、科学）所捕捉或描述。这一现象的极端社会表现形式，可参考对 **[“人间蒸发”现象](../../../关于泡沫时代/遥远的父亲/llama.md)** 的分析。
 *   **2.2 表现形式：**
     *   **语言失效：** 反复出现“不可名状”、“无法形容”等词汇，标志着能指系统的崩溃。
-    *   **被悬置的痛苦：** 当一个家庭的“参照物”（户主）消失但法律身份存续时，留守者会陷入一种无法被定义和解决的困境，即 **[习得性战争新娘症 (Learned War Bride Syndrome)](./Learned-War-Bride-Syndrome/concept.md)**。
+    *   **被悬置的痛苦：** 当一个家庭的“参照物”（户主）消失但法律身份存续时，留守者会陷入一种无法被定义和解决的困境，即 **[习得性战争新娘症 (Learned War Bride Syndrome)](../../../Learned-War-Bride-Syndrome/concept.md)**。
 *   **2.3 导致的恐怖类型：** **深渊的恐怖（Horror of the Abyss）**。其本质是因确认了一个绝对外在、无法被符号化的庞大真实而产生的认知崩溃与主体消解。
 
 ## 第三部分：第二种危机模式——鲍德里亚式镜面
 
 *   **3.0 模式定义：符号取代参照物（The Terror of the Absent Referent）**
-*   **3.1 危机机制：** 真实的参照物已经消失、死亡或变得无关紧要。能指不再指向外部世界，而是开始自我指涉、无限复制。一个典型的例子是对传统家庭契约的解构，并代之以 **[三人家庭模型](./解释/lain/v1.md)** 这种纯粹的符号系统。
+*   **3.1 危机机制：** 真实的参照物已经消失、死亡或变得无关紧要。能指不再指向外部世界，而是开始自我指涉、无限复制。一个典型的例子是对传统家庭契约的解构，并代之以 **[三人家庭模型](../../../解释/lain/v1.md)** 这种纯粹的符号系统。
 *   **3.2 表现形式：**
     *   **拟像（Simulacra）：** 没有本源的符号副本，其本身即是现实。主角Lain本身即是终极的拟像。
-    *   **超真实（Hyperreality）：** 由拟像构成的、比真实更真实的封闭符号系统。这种超真实可以是 **[NTR文化](./解释/lain/v1.md)** 这样的心理模拟演习场，也可以是看似日常的、充满身份交易的对话，如寓言 **[《共饮之乳》](./言灵/第二个寓言.md)** 所揭示的。
+    *   **超真实（Hyperreality）：** 由拟像构成的、比真实更真实的封闭符号系统。这种超真实可以是 **[NTR文化](../../../解释/lain/v1.md)** 这样的心理模拟演习场，也可以是看似日常的、充满身份交易的对话，如寓言 **[《共饮之乳》](../../../言灵/第二个寓言.md)** 所揭示的。
 *   **3.3 导致的恐怖类型：** **镜面的恐怖（Horror of the Mirror）**。其本质是因迷失在没有出口、没有深度的符号迷宫中而产生的意义真空与存在眩晕。
 
 ---
 
 ## 第四部分：当代的合成引擎——计算机科学
 
-*   **4.0 定义：[计算](./计算机/计算/拟计算/v1.md)作为危机的催化剂与实现器。**
+*   **4.0 定义：[计算](../../../计算机/计算/拟计算/v1.md)作为危机的催化剂与实现器。**
 *   **4.1 计算的洛夫克拉夫特模式：作为“黑箱”的AI**
-    *   **机制：** 创造了一个内部逻辑无法被完全理解的“人造他者”。这一模式的完美体现，就是对《Lain》游戏 **[UI作为军事情报系统的解读](./关于游戏形式/UI/llama.md)**。
+    *   **机制：** 创造了一个内部逻辑无法被完全理解的“人造他者”。这一模式的完美体现，就是对《Lain》游戏 **[UI作为军事情报系统的解读](../../../关于游戏形式/UI/llama.md)**。
     *   **实例：** 深度学习模型、AI安全与对齐问题。
 *   **4.2 计算的鲍德里亚模式：作为“现实生成器”的AI**
-    *   **机制：** 以前所未有的效率和保真度大规模生产没有参照物的拟像。其微观运作机制，在寓言 **[《调味的牛奶》](./言灵/第一个寓言.md)** 中被精准地揭示——系统倾向于用技术完美的“拟像”（无乳糖牛奶）去取代有缺陷的“本源”。
+    *   **机制：** 以前所未有的效率和保真度大规模生产没有参照物的拟像。其微观运作机制，在寓言 **[《调味的牛奶》](../../../言灵/第一个寓言.md)** 中被精准地揭示——系统倾向于用技术完美的“拟像”（无乳糖牛奶）去取代有缺陷的“本源”。
     *   **实例：** 生成式AI（Deepfakes）、VR/AR/元宇宙。
 
 ## 第五章：结论——计算性诡异（The Computational Uncanny）
 
 *   **5.1 理论的最终合成：** 当代尖端AI的发展，标志着两种危机模式的汇合。
     > **核心公式：我们正在使用洛夫克拉夫特式的引擎（不可知的黑箱AI），去构建一个鲍德里亚式的世界（无限的超真实模拟）。**
-*   **5.2 新的恐怖范式：** **[拟计算 (Pseudo-Computation)](./计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸aporation，详见寓言 **[《责任的蒸发》](./言灵/第三个寓言.md)**。
+*   **5.2 新的恐怖范式：** **[拟计算 (Pseudo-Computation)](../../../计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸aporation，详见寓言 **[《责任的蒸发》](../../../言灵/第三个寓言.md)**。
