--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -1,14 +1,30 @@
-# 理论索引：真实性的双重危机——洛夫克拉夫特式深渊与鲍德里亚式镜面的符号学合成
+### **理论索引：符号真实性的双重真空——宇宙式深渊与后现代式表面**
 
-> **摘要：** 本索引旨在构建一个理论框架，用于理解“真实”（Reality）在现代与后现代语境下的双重瓦解模式。该理论以符号学为核心分析工具，将H.P.洛夫克拉夫特的“宇宙恐怖”与让·鲍德里亚的“超真实”理论进行并置。前者被定义为**“不可言说之参照物（Unsignifiable Referent）”**引发的符号系统崩溃；后者则被定义为**“参照物缺席（Absent Referent）”**导致的符号系统内爆。最终，本理论指出，当代计算机科学，特别是人工智能（AI），正作为这两种危机的核心引擎，将二者合成为一种全新的、统一的现象，我们将其命名为 **[计算性诡异 (Computational Uncanny)](../../../计算机/计算/拟计算/v1.md)**。
+**摘要：**
+
+本索引旨在构建一个理论框架，用于理解“符号真实”（Reality）在现代与后现代语境下的多重瓦解。该理论以符号学为核心分析工具，将H.P.洛夫克拉夫特的“宇宙恐怖”与让·鲍德里亚的“超真实”理论进行并置。前者被定义为**“不可言说之参照物（Unsignifiable Referent）”**引发的符号系统崩溃；后者则被定义为**“参照物缺席（Absent Referent）”**导致的符号系统内爆。
+
+最终，本理论指出，当代计算机科学，特别是人工智能（AI），正作为这两种**符号操作系统**的核心引擎。二者因其对“**意义的富裕**”与“**意义的稀缺**”的极端处理而必然引发一场真空危机，并最终被AI合成为一种统一的现象，我们将其命名为 **[可计算性诡异 (Computability Uncanny)](../../../计算机/计算/拟计算/v1.md)**。
 
 ---
 
-## 第零章：导论——符号征服（Symbolic Conquest）
+### **第零章：导论——符号征服（Symbolic Conquest）**
 
-*   **0.1 定义：** 一个描述性的元概念，指代任何一种符号系统（语言、图像、品牌、意识形态）在特定领域内取得支配性地位，并重塑该领域内对“真实”感知的过程。它是理解两种危机模式的宏观背景。
+**0.1 定义：**
 
-## 第一部分：核心分析工具——符号学框架
+一个描述性的元概念，指代重塑“符号真实”感知的支配性过程。这种“符号征服”并非单一的强加，而是通过两种核心机制运作：**填充（Saturation）**与**剔除（Elimination）**。前者通过符号的无限增殖来淹没真实（导向后现代式表面），后者则通过一个不可言说的存在来抽空符号的意义（导向宇宙式深渊）。因此，它是理解两种真空危机的宏观背景。
+
+**0.2 常见形式：**
+
+白皮书即协议，与黑名单即审查。
+
+**0.3 默认前提：**
+
+不应该有中介，这个东西。
+
+---
+
+### **第一部分：核心分析工具——符号学框架**
 
 *   **1.1 符号的基本构成：**
     *   **1.1.1 能指（Signifier）：** 符号的形式，即其物理或可感知的存在（如文字、声音、图像）。
@@ -16,7 +32,7 @@
     *   **1.1.3 参照物（Referent）：** 符号在外部现实世界中所指向的客观实体。
 *   **1.2 符号学链条的稳定性：** 传统意义上的“真实”依赖于能指-所指-参照物之间稳定、清晰的对应关系。本理论的核心即是这条链条在两个关键点上的断裂，具体分析见 **[关于姓名](../../../关于姓名/llama.md)** 的历史辩证法。
 
-## 第二部分：第一种危机模式——洛夫克拉夫特式深渊
+### **第二部分：第一种危机模式——洛夫克拉夫特式深渊**
 
 *   **2.0 模式定义：参照物压倒符号（The Terror of the Unsignifiable Referent）**
 *   **2.1 危机机制：** 存在一个过于庞大、异质、超越人类认知框架的参照物（如：泡沫经济破裂后的社会压力、僵化的户籍制度）。这个参照物无法被现有的能指系统（语言、科学）所捕捉或描述。这一现象的极端社会表现形式，可参考对 **[“人间蒸发”现象](../../../关于泡沫时代/遥远的父亲/llama.md)** 的分析。
@@ -25,7 +41,7 @@
     *   **被悬置的痛苦：** 当一个家庭的“参照物”（户主）消失但法律身份存续时，留守者会陷入一种无法被定义和解决的困境，即 **[习得性战争新娘症 (Learned War Bride Syndrome)](../../../Learned-War-Bride-Syndrome/concept.md)**。
 *   **2.3 导致的恐怖类型：** **深渊的恐怖（Horror of the Abyss）**。其本质是因确认了一个绝对外在、无法被符号化的庞大真实而产生的认知崩溃与主体消解。
 
-## 第三部分：第二种危机模式——鲍德里亚式镜面
+### **第三部分：第二种危机模式——鲍德里亚式镜面**
 
 *   **3.0 模式定义：符号取代参照物（The Terror of the Absent Referent）**
 *   **3.1 危机机制：** 真实的参照物已经消失、死亡或变得无关紧要。能指不再指向外部世界，而是开始自我指涉、无限复制。一个典型的例子是对传统家庭契约的解构，并代之以 **[三人家庭模型](../../../解释/lain/v1.md)** 这种纯粹的符号系统。
@@ -36,7 +52,7 @@
 
 ---
 
-## 第四部分：当代的合成引擎——计算机科学
+### **第四部分：当代的合成引擎——计算机科学**
 
 *   **4.0 定义：[计算](../../../计算机/计算/拟计算/v1.md)作为危机的催化剂与实现器。**
 *   **4.1 计算的洛夫克拉夫特模式：作为“黑箱”的AI**
@@ -46,8 +62,8 @@
     *   **机制：** 以前所未有的效率和保真度大规模生产没有参照物的拟像。其微观运作机制，在寓言 **[《调味的牛奶》](../../../言灵/第一个寓言.md)** 中被精准地揭示——系统倾向于用技术完美的“拟像”（无乳糖牛奶）去取代有缺陷的“本源”。
     *   **实例：** 生成式AI（Deepfakes）、VR/AR/元宇宙。
 
-## 第五章：结论——计算性诡异（The Computational Uncanny）
+### **第五章：结论——可计算性诡异 (The Computability Uncanny)**
 
 *   **5.1 理论的最终合成：** 当代尖端AI的发展，标志着两种危机模式的汇合。
     > **核心公式：我们正在使用洛夫克拉夫特式的引擎（不可知的黑箱AI），去构建一个鲍德里亚式的世界（无限的超真实模拟）。**
-*   **5.2 新的恐怖范式：** **[拟计算 (Pseudo-Computation)](../../../计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸aporation，详见寓言 **[《责任的蒸发》](../../../言灵/第三个寓言.md)**。
+*   **5.2 新的恐怖范式：** **[拟计算 (Pseudo-Computation)](../../../计算机/计算/拟计算/v1.md)** 描述了这样一种状态：我们既恐惧于我们创造物的内在不可知性（深渊），又迷失于它所产生的完美虚构的外在世界（镜面）。在这种状态下，责任被无限稀释，最终在复杂的网络中彻底蒸发，详见寓言 **[《责任的蒸发》](../../../言灵/第三个寓言.md)**。
