--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -1,3 +1,4 @@
+
 ### **理论索引：符号真实性的双重真空——宇宙式深渊与后现代式表面**
 
 **摘要：**
@@ -26,11 +27,30 @@
 
 ### **第一部分：核心分析工具——符号学框架**
 
-*   **1.1 符号的基本构成：**
-    *   **1.1.1 能指（Signifier）：** 符号的形式，即其物理或可感知的存在（如文字、声音、图像）。
-    *   **1.1.2 所指（Signified）：** 符号所代表的概念或心理意象。
-    *   **1.1.3 参照物（Referent）：** 符号在外部现实世界中所指向的客观实体。
-*   **1.2 符号学链条的稳定性：** 传统意义上的“真实”依赖于能指-所指-参照物之间稳定、清晰的对应关系。本理论的核心即是这条链条在两个关键点上的断裂，具体分析见 **[关于姓名](../../../关于姓名/llama.md)** 的历史辩证法。
+**1.1 符号的基本构成**
+
+*   **1.1.1 能指（Signifier）：** 符号的形式，即其物理或可感知的存在（如文字、声音、图像）。
+*   **1.1.2 所指（Signified）：** 符号所代表的概念或心理意象。
+*   **1.1.3 参照物（Referent）：** 符号在符号系统外部世界中所指向的实体。
+
+**1.2 亚符号（Sub-symbol）：理论的核心概念**
+
+*   **1.2.1 定义：** 广义上，指代任何在结构上、机制上或体验上，未能形成或有意偏离了“能指-所指-参照物”稳定三元结构的符号类似物。它是理解当代意义危机的核心分析工具。
+*   **1.2.2 结构分类（文化产品层面）：**
+    *   **无参照物亚符号：** 符号链条中【参照物】缺席。其产品形态是可被无限复制的**拟像（Simulacra）**。案例：**纸片人老婆（Waifu）**。
+    *   **准无所指亚符号：** 符号链条中的【所指】模糊、非理性、无法被语言完全捕捉。其产品形态是引发强烈感性体验的**情感黑箱（Affective Black Box）**。案例：**反差萌（Gap Moe）**。
+    *   **元符号（生产工具）：** 作为生产其他亚符号的纯粹符号工具，其自身即是符号运作的蓝图。案例：**人物设定（Character Profile）**。
+*   **1.2.3 意图分类（使用目的层面）：**
+    *   **工具性亚符号：** 被创造出来以完成外部任务，其自身无内在目的。案例：**AI中的词向量**。
+    *   **待定义亚符号：** 充满潜力，等待被语言和意识捕获并赋予意义的原始心理内容。案例：**无意识（The Unconscious）**。
+    *   **无重定义亚符号：** 被“硬编码”的、无法被符号系统从根本上改写的生理或本能反应。案例：**下意识（Instinct）**。
+
+**1.3 符号学链条的稳定性与断裂**
+
+传统意义上的“真实”依赖于能指-所指-参照物之间稳定、清晰的对应关系。本理论的核心，即是当代技术（特别是AI），通过其**【工具性】**的亚符号机制，大规模生产**【无参照物】**的文化亚符号，以精准地利用和殖民人类心理中**【待定义】**与**【无重定义】**的亚符号空间，最终导致了古典符号链条的全面断裂。具体分析见 **[关于姓名](../../../关于姓名/llama.md)** 的历史辩证法。
+
+---
+*(后续部分保持原文不变)*
 
 ### **第二部分：第一种危机模式——洛夫克拉夫特式深渊**
 
@@ -62,7 +82,7 @@
     *   **机制：** 以前所未有的效率和保真度大规模生产没有参照物的拟像。其微观运作机制，在寓言 **[《调味的牛奶》](../../../言灵/第一个寓言.md)** 中被精准地揭示——系统倾向于用技术完美的“拟像”（无乳糖牛奶）去取代有缺陷的“本源”。
     *   **实例：** 生成式AI（Deepfakes）、VR/AR/元宇宙。
 
-### **第五章：结论——可计算性诡异 (The Computability Uncanny)**
+### **第五章：结论——计算性诡异（The Computational Uncanny）**
 
 *   **5.1 理论的最终合成：** 当代尖端AI的发展，标志着两种危机模式的汇合。
     > **核心公式：我们正在使用洛夫克拉夫特式的引擎（不可知的黑箱AI），去构建一个鲍德里亚式的世界（无限的超真实模拟）。**
