--- a/计算机/计算/拟计算/t1.md
+++ b/计算机/计算/拟计算/t1.md
@@ -82,7 +82,7 @@
     *   **机制：** 以前所未有的效率和保真度大规模生产没有参照物的拟像。其微观运作机制，在寓言 **[《调味的牛奶》](../../../言灵/第一个寓言.md)** 中被精准地揭示——系统倾向于用技术完美的“拟像”（无乳糖牛奶）去取代有缺陷的“本源”。
     *   **实例：** 生成式AI（Deepfakes）、VR/AR/元宇宙。
 
-### **第五章：结论——计算性诡异（The Computational Uncanny）**
+### **第五章：结论——**[可计算性诡异 (Computability Uncanny)](../../../计算机/计算/拟计算/v1.md)**。
 
 *   **5.1 理论的最终合成：** 当代尖端AI的发展，标志着两种危机模式的汇合。
     > **核心公式：我们正在使用洛夫克拉夫特式的引擎（不可知的黑箱AI），去构建一个鲍德里亚式的世界（无限的超真实模拟）。**
